--- a/src/app/components/main-menu/main-menu.html
+++ b/src/app/components/main-menu/main-menu.html
@@ -3,4 +3,7 @@
   <li>
     <a [routerLink]="['SongWheel']">Play</a>
   </li>
+  <li>
+    <a [routerLink]="['Options']">Options</a>
+  </li>
 </ul>
