--- a/src/app/options/options-list.component.html
+++ b/src/app/options/options-list.component.html
@@ -1,10 +1,11 @@
-<h2>Options List</h2>
+<h2 *ngIf="option">{{option.label}}</h2>
+<h2 *ngIf="!option">Options</h2>
 
 <ul>
-  <li *ngFor="#options of options">
+  <li *ngFor="#option of options">
     <a
-      [routerLink]="['OptionsDetail', { id: options.id }]">
-      {{options.label}}
+      [routerLink]="['OptionsList', { id: option.id }]">
+      {{option.label}}
     </a>
   </li>
 </ul>
