--- a/src/app/components/main-menu/main-menu.css
+++ b/src/app/components/main-menu/main-menu.css
@@ -18,7 +18,8 @@ h1 {
 }
 
 ul {
-  background-color: #fff;
+  margin-top:40%;
+  background-color: #00b9d7;
   list-style-type: none;
   width: 100%;
 }
@@ -35,10 +36,14 @@ a {
   color: #000;
   font-size: 1.5em;
   padding: 0.25em 1em;
+  transition: linear 0.05s;
 }
 
 a.selected {
-  background-color: #00b9d7;
   color: #fff;
+  background-color: rgba(255,255,255,0.2);
+  text-shadow: 0 0 1px #000,
+               0 0 3px #fff;
   padding-left: 1.5em;
+  transition: linear 0.1s;
 }
