--- a/src/app/components/main-menu/main-menu.css
+++ b/src/app/components/main-menu/main-menu.css
@@ -33,7 +33,7 @@ a {
   display: block;
   width: 100%;
   text-decoration: none;
-  color: #000;
+  color: rgba(255,255,255,0.7);
   font-size: 1.5em;
   padding: 0.25em 1em;
   transition: linear 0.05s;
@@ -41,7 +41,6 @@ a {
 
 a.selected {
   color: #fff;
-  background-color: rgba(255,255,255,0.2);
   text-shadow: 0 0 1px #000,
                0 0 3px #fff;
   padding-left: 1.5em;
