--- a/src/app/components/main-menu/main-menu.html
+++ b/src/app/components/main-menu/main-menu.html
@@ -2,19 +2,19 @@
   <div class="main-menu-content">
     <h1>Rhythmos</h1>
     <ul>
-      <li #item *ngFor="#elem of menu"
-        (mouseenter)="item.hover = true;"
-        (mouseleave)="item.hover = false;">
-        <!-- TODO: Dynamically configure the Angular Router service to make
-        //      the routerLinke work with elem link attribute. -->
-        <a class="selected"
-          [ngClass]="{'selected': item.hover}"
-          [routerLink]="['SongWheel']">
-          {{elem.label}}
+      <li #item *ngFor="#route of menu"
+        (mouseenter)="select(route)">
+        <a *ngIf="route.path"
+          [ngClass]="{'selected': route.active}"
+          [routerLink]="route.path">
+          {{route.name}}
         </a>
-      </li>
-      <li>
-        <a [routerLink]="['Options']">Options</a>
+        <a *ngIf="route.href"
+          target="_blank"
+          [ngClass]="{'selected': route.active}"
+          [href]="route.href">
+          {{route.name}}
+        </a>
       </li>
     </ul>
   </div>
