--- a/src/app/components/song-detail/song-detail.html
+++ b/src/app/components/song-detail/song-detail.html
@@ -1,5 +1,20 @@
-<div *ngIf="song">
-  <h2>{{song.title}}</h2>
-  <h4>{{song.subtitle}}</h4>
-  <h4>{{song.artist}}</h4>
+<div class="song-detail" *ngIf="song">
+  <div class="title">
+    <h1>Song Info</h1>
+  </div>
+  <img id="image-detail-banner" src="{{song.banner}}"/>
+  <h2 class="song-title">{{song.title}}</h2>
+  <h3>{{song.subtitle}}</h3>
+  <h3>{{song.artist}}</h3>
+  <h4>{{song.cdtitle}}</h4>
+  <h4>{{song.genre}}</h4>
+  <h3>{{song.bpm}}</h3>
+  <div class="chart-select">
+    <span class="rating">
+    {{song.notes.rating}}
+    </span>
+    <span class="difficulty">
+      {{song.notes.difficulty}}
+    </span>
+  </div>
 </div>
