--- a/src/app/components/song-wheel/song-wheel.css
+++ b/src/app/components/song-wheel/song-wheel.css
@@ -1,20 +1,76 @@
+*{
+  box-sizing: border-box;
+  border:0;
+  padding:0;
+}
+
+#body{
+  height:600px;
+  border-bottom:5px solid #00b9d7;
+  box-shadow: inset 0 30px 30px -30px rgba(0,0,0,0.5),
+    inset 0 -30px 30px -30px rgba(0,0,0,0.5);
+}
+
+.title{
+  box-sizing: border-box;
+  background:#fff;
+  height:50px;
+  color:#00b9d7;
+  border-bottom:5px solid #00b9d7;
+  overflow:hidden;
+  padding:0;
+  padding-top:16px;
+  margin:0;
+}
+
+.title h1{
+  padding:0;
+  margin:0;
+  color:#00b9d7;
+  font-size:2em;
+}
+
 .wheel {
   float: right;
-  width: 50%;
+  width: 40%;
+  height: 100%;
+  border-left:5px solid #fff;
+  background:rgba(50,50,50,0.6);
 }
 
 .wheel ul.songs li.song {
+  padding:5px;
+  margin:0;
+  color:#00b9d7;
   list-style: none;
-  background: #eee;
   font-size:2em;
   cursor:pointer;
+  position: relative;
+  height:60px;
+}
+
+h2.song-title{
+  padding:0;
+  margin:0;
+  font-size:0.8em;
+}
+
+h4.song-artist{
+  padding:0;
+  margin:0;
+  font-size:0.4em;
+  position:absolute;
+  right:2px;
+  bottom:2px;
 }
 
 .wheel ul.songs li.song.selected {
-  background:#fafafa;
+  background:rgba(255,255,255,0.25);
 }
 
 .song-detail{
+  padding:0;
+  margin:0;
   float:left;
-  width:50%;
+  width:60%;
 }
