--- a/src/app/components/song-wheel/song-wheel.css
+++ b/src/app/components/song-wheel/song-wheel.css
@@ -7,8 +7,8 @@
 #body{
   height:600px;
   border-bottom:5px solid #00b9d7;
-  box-shadow: inset 0 30px 30px -30px rgba(0,0,0,0.5),
-    inset 0 -30px 30px -30px rgba(0,0,0,0.5);
+  box-shadow: inset 0 100px 100px -100px rgba(0,0,0,0.75),
+    inset 0 -100px 100px -100px rgba(0,0,0,0.75);
 }
 
 .title{
@@ -35,11 +35,12 @@
   width: 40%;
   height: 100%;
   border-left:5px solid #fff;
-  background:rgba(50,50,50,0.6);
+  background:rgba(50,50,50,0.75);
 }
 
 .wheel ul.songs li.song {
-  padding:5px;
+  box-sizing: border-box;
+  padding:5px 20px;
   margin:0;
   color:#00b9d7;
   list-style: none;
@@ -50,9 +51,17 @@
 }
 
 h2.song-title{
+  font-size:0.8em;
+  height:0.8em;
   padding:0;
   margin:0;
-  font-size:0.8em;
+}
+
+h3.song-subtitle{
+  font-size:0.5em;
+  height:0.5em;
+  padding:8px 0 0 0;
+  margin:0;
 }
 
 h4.song-artist{
@@ -60,8 +69,8 @@ h4.song-artist{
   margin:0;
   font-size:0.4em;
   position:absolute;
-  right:2px;
-  bottom:2px;
+  right:5px;
+  bottom:3px;
 }
 
 .wheel ul.songs li.song.selected {
@@ -69,7 +78,7 @@ h4.song-artist{
 }
 
 .song-detail{
-  padding:0;
+  padding:25px 75px 25px 25px;
   margin:0;
   float:left;
   width:60%;
