--- a/src/app/components/main-menu/main-menu.css
+++ b/src/app/components/main-menu/main-menu.css
@@ -9,7 +9,9 @@
 }
 
 .main-menu-content{
-  vertical-align: middle;
+  width:100%;
+  position:absolute;
+  bottom:25%;
 }
 
 h1 {
@@ -18,7 +20,6 @@ h1 {
 }
 
 ul {
-  margin-top:40%;
   background-color: #00b9d7;
   list-style-type: none;
   width: 100%;
