--- a/src/app/components/song-wheel/song-wheel.html
+++ b/src/app/components/song-wheel/song-wheel.html
@@ -5,7 +5,7 @@
   </div>
   <div class="content">
     <div class="background"
-      *ngFor="#bg of bgs; #i = index;"
+      *ngFor="let bg of bgs; let i = index;"
       [ngClass]="{
         'fade-in': i == bgs.length - 1 && i != 0
       }"
@@ -17,8 +17,8 @@
     </div>
     <div class="wheel">
       <ul class="songs">
-        <li class="song" #item
-          *ngFor="#song of songs; #i = index;"
+        <li class="song" let item
+          *ngFor="let song of songs; let i = index;"
           (mouseenter)="select(i)"
           [ngClass]="{'selected': isSelected(i)}"
           [routerLink]="['Play', {'id': song.id}]">
