--- a/src/app/components/song-detail/song-detail.component.html
+++ b/src/app/components/song-detail/song-detail.component.html
@@ -3,23 +3,32 @@
     <div class="banner" [ngStyle]="{
       'background': fetchBanner()
       }">
-      <h2 class="song-title">{{song.getMeta().title}}</h2>
+      <h2 class="song-title">{{song.getMeta().title}}  //  {{song.getMeta().artist}}</h2>
     </div>
     <div class="chart-container">
       <div class="chart-select {{chart.difficulty}}"
-        *ngFor="let chart of song.getCharts() | sortCharts">
-        <span class="difficulty">
-          {{chart.difficulty}}
-          {{chart.meter}}
-        </span>
-        <span class="stepstype">
-          {{chart.stepstype}}
-        </span>
+        (click)="select(chart)"
+        [ngClass]="{
+          'selected': isSelected(chart)
+        }"
+        *ngFor="let chart of song.getCharts() | filterCharts: 'dance' | sortCharts">
+        <div class="left">
+          <span class="stepstype">
+            {{chart.stepstype | formatStepstype}}
+          </span>
+          <span class="difficulty">
+            {{chart.difficulty | formatDifficulty}}
+          </span>
+        </div>
+        <div class="right">
+          <span class="meter">
+            {{chart.meter}}
+          </span>
+        </div>
       </div>
     </div>
   </div>
   <h3>{{song.getMeta().subtitle}}</h3>
-  <h3>{{song.getMeta().artist}}</h3>
   <h4>{{song.getMeta().cdtitle}}</h4>
   <h4>{{song.getMeta().genre}}</h4>
 </div>
